# tailwag_macros

./: .gitignore  Cargo.toml  README.md
derive_command_line_args_macro/: Cargo.toml
derive_command_line_args_macro/src/: _derive_builder.rs  derive_logic.rs  derive_struct.rs  lib.rs  utils.rs
derive_dataprovider_logic/: Cargo.toml
derive_dataprovider_logic/src/: lib.rs
derive_dataprovider_logic/src/database_definition/: database_definition.rs  migration.rs  mod.rs  table_definition.rs
derive_dataprovider_logic/src/database_definition/migration/: alter_table.rs  create_table.rs  migration.rs  mod.rs
derive_dataprovider_logic/src/database_definition/table_definition/: column.rs  identifier.rs  mod.rs  table.rs  table_definition.rs
derive_dataprovider_logic/src/queries/: query_builder.rs
derive_dataprovider_macros/: Cargo.toml
derive_dataprovider_macros/src/: database_table_definition.rs  derive_struct.rs  lib.rs
derive_dataprovider_macros/src/function/: build_create_table_query.rs  build_get_query.rs  build_insert_query.rs  mod.rs
derive_insertable_macros/: Cargo.toml
derive_insertable_macros/src/: database_table_definition.rs  derive_struct.rs  lib.rs
src/: lib.rs
src/template_macros/: derive_struct.rs  mod.rs
tailwag_macro_derive_insertable/: Cargo.toml
tailwag_macro_derive_insertable/src/: lib.rs
tailwag_macro_derive_queryable/: Cargo.toml
tailwag_macro_derive_queryable/src/: lib.rs
tailwag_macro_exports/: Cargo.toml
tailwag_macro_exports/src/: lib.rs
tailwag_macro_inline/: Cargo.toml
tailwag_macro_inline/src/: lib.rs
tailwag_macro_logic/: Cargo.toml
tailwag_macro_logic/src/: _derive_builder.rs  database_table_definition.rs  derive_logic.rs  lib.rs
tailwag_macro_logic/src/attribute/: mod.rs
tailwag_macro_logic/src/derive/: get_table_definition.rs  insertable.rs  mod.rs  queryable.rs
tailwag_macro_logic/src/derive/forms/: build_routes.rs
tailwag_macro_logic/src/derive/gui/: as_egui_form.rs  into_form.rs  mod.rs  to_form.rs
tailwag_macro_logic/src/derive/orm/: build_routes.rs  deleteable.rs  get_table_definition.rs  insertable.rs  mod.rs  updateable.rs
tailwag_macro_logic/src/derive/util_traits/: deref.rs  display.rs  from_string.rs  mod.rs
tailwag_macro_logic/src/derive/web_service/: build_create_route.rs  build_list_get_route.rs  build_patch_route.rs  build_routes.rs  mod.rs  rest_api.rs
tailwag_macro_logic/src/util/: attribute_parsing.rs  database_table_definition.rs  derive_logic.rs  mod.rs  type_parsing.rs
tailwag_macros_impl/: Cargo.toml
tailwag_macros_impl/src/: lib.rs
