[package]
name = "tailwag_macros"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikwithak/tailwag_macros"
description = "A collection of macros to support the tailwag crate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
darling = "0.20.1"
tailwag_macro_exports = { version = "0.2.0", path = "tailwag_macro_exports" }
tailwag_macro_inline = { version = "0.2.0", path = "tailwag_macro_inline" }
tailwag_orm_macros = { version = "0.2.0", path = "../orm/macros"}
proc-macro2 = "1.0.63"
quote = "1.0.29"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres"] }
syn = { version = "2.0.23", features = ["full"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
serde = { version = "1.0.188", features = ["derive"] }

[features]
default = []
orm = ["tailwag_macro_exports/orm"]
no-orm = []
