[lib]
proc-macro = true

[package]
name = "derive_command_line_args_macro"
version = "0.1.0"
edition = "2021"

[features]
default = ["timestamp"]
timestamp = []
uuid = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.1"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full", "parsing"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
