[lib]
proc-macro = true

[package]
name = "tailwag_macro_exports"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikwithak/tailwag_macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tailwag_macro_logic = { version = "0.1.0", path = "../tailwag_macro_logic" }

syn = "2.0.31"

[features]
default = []
orm = ["tailwag_macro_logic/orm"]
no_orm = []
