[package]
name = "tailwag_macro_inline"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikwithak/tailwag_macros"
description = "The logic for A collection of macros to support the tailwag crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
orm = []
# web_service = []
# util = []
