[lib]
proc-macro = true

[package]
name = "tailwag_macros_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tailwag_macro_logic = { version = "0.1.0", path = "../tailwag_macro_logic" }

syn = "2.0.31"
